[package]
name = "rum"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.1"
hyper = { version = "1.3", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["http1", "server", "tokio"] }
rum-macros = { version = "0.1.0", path = "../rum-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"

[features]
default = []
nightly = []

[dev-dependencies]
rum = { path = ".", features = ["nightly"] }
